--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
     <base href="/" />
     <title>Angular 7 Tutorial</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <script>
+        var global = global || window;
+        var Buffer = Buffer || [];
+        var process = process || {
+          env: { DEBUG: undefined },
+          version: []
+        };
+      </script>
     <!-- bootstrap css -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
 </head>
