--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <app>Loading...</app>
+  <app><div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div></app>
 </body>
 </html>
